Fixed mousemove target event on firefox to resolve #660.
Free Software Free Society

To support commits by ctubio,
you can buy-me-a-drink with a small git tip at:
  1GitTipgxvKB3zjCLXRcSgDhC9pivkpc7u

I promise to drink chocolate milk in the development of the next commit.

To request new features or in case this commit breaks something for you,
please create a new github issue with all possible details,
but never share your API Keys!

--- a/src/www/sass/bootstrap.scss
+++ b/src/www/sass/bootstrap.scss
@@ -5996,7 +5996,7 @@ div#hud_nav {
   width: 10em;
   height: 100%;
   position: absolute;
-  transform: rotatey(45deg);
+  transform: rotateY(45deg);
   z-index: -1;
   border-radius: 0px 6px 6px 0px;
   padding-top: 21px;
